Added the functionability and update the interface pages
Added all the functions what are use by JOLC with the base of C3D, also update a few things in the interface pages

--- a/client/src/css/reportsPage.css
+++ b/client/src/css/reportsPage.css
@@ -28,6 +28,12 @@
 
 #arbol{
     position: absolute;
+    top: 40%;
+    left: 47.2%;
+}
+
+#optimizacion{
+    position: absolute;
     top: 50%;
     left: 46.4%;
 }
